Changed font, added svg logo to menu, changed colors

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,5 @@
-Mobile menu: tapping away from drop down menu closes it
 
 Mobile menu: bar item button clicking bounds are off-center?
+
+.:: Done ::.
+* Mobile menu: tapping away from drop down menu closes it
